<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:clickable="true"
    android:background="?selectableItemBackground"
    android:focusable="true">
    <TextView
        android:id="@+id/tto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_placeholder"
        android:textSize="20sp"
        android:layout_marginStart="12dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tfrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_placeholder"
        android:textSize="20sp"
        android:layout_marginStart="6dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textSize="24sp"/>
</LinearLayout>