<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionFinder">
<!--    android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--    android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--    android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--    android:paddingBottom="@dimen/activity_vertical_margin"-->

<TextView
    android:id="@+id/ivi1textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:gravity="fill_horizontal|fill_vertical"
    android:text="@string/ivi1_intro"
    android:textAlignment="gravity"
    android:textColor="#223EDD" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:ems="10"
    android:id="@+id/ivi1search"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:hint="@string/ivi1_enter"
    android:textAlignment="center" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ivi1_search"
    android:id="@+id/ivi1button"
    android:layout_below="@+id/ivi1search"
    android:layout_alignParentLeft="false"
    android:layout_alignParentStart="false"
    android:layout_centerHorizontal="true"
    android:onClick="search"/>

</RelativeLayout>